samples/_failures_safe/1761277039_9910a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20146de5.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_20146de5.c:153:47: error: missing terminating " character
  153 |             case TOKEN_IDENTIFIER: type_str = "IDENTIFI
      |                                               ^~~~~~~~~
./samples/SAFE/__tmp_20146de5.c:153:13: error: expected expression at end of input
  153 |             case TOKEN_IDENTIFIER: type_str = "IDENTIFI
      |             ^~~~
./samples/SAFE/__tmp_20146de5.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_20146de5.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_20146de5.c:153:13: error: expected declaration or statement at end of input
